// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dirToObject config w/ canAdd and dirPath 1`] = `
Object {
  "currencies": Object {
    "resolve": [Function],
    "type": Array [
      Object {
        "id": "string",
        "name": "string",
      },
    ],
  },
}
`;

exports[`dirToObject config w/ dirPath only 1`] = `
Object {
  "currencies": Object {
    "resolve": [Function],
    "type": Array [
      Object {
        "id": "string",
        "name": "string",
      },
    ],
  },
  "info": Object {
    "name": "dir-to-object",
    "version": "1.0.0-alpha.4",
  },
}
`;
